# MSEdgeFeatures

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  EdgeCanaryShortcutMaker.ps1  LICENSE  README.md  SECURITY.md  Shortcut.ps1  Update-old method-using Edge shortcut.ps1  Update.ps1  last.txt
.github/: dependabot.yml
.github/workflows/: Update.yml
Edge Canary/115/115.0.1878.0/: added.txt
Edge Canary/115/115.0.1879.0/: original.txt  removed.txt
Edge Canary/115/115.0.1880.0/: added.txt  original.txt  removed.txt
Edge Canary/115/115.0.1881.0/: added.txt  original.txt  removed.txt
Edge Canary/115/115.0.1886.0/: added.txt  original.txt  removed.txt
Edge Canary/115/115.0.1889.0/: added.txt  original.txt  removed.txt
Edge Canary/115/115.0.1891.0/: added.txt  original.txt  removed.txt
Edge Canary/115/115.0.1892.0/: added.txt  original.txt
Edge Canary/115/115.0.1895.0/: added.txt  original.txt  removed.txt
Edge Canary/115/115.0.1900.0/: added.txt  removed.txt
Edge Canary/115/115.0.1901.0/: original.txt
Edge Canary/116/116.0.1903.0/: added.txt  original.txt  removed.txt
Edge Canary/116/116.0.1908.0/: added.txt  original.txt  removed.txt
Edge Canary/116/116.0.1914.0/: added.txt  original.txt
Edge Canary/116/116.0.1915.0/: added.txt  original.txt
Edge Canary/116/116.0.1916.0/: added.txt  original.txt  removed.txt
Edge Canary/116/116.0.1917.0/: added.txt  (+2 more)
Feature Specific shortcuts/Copilot/: EDGECAN.lnk  Features list.txt
Feature Specific shortcuts/EdgePhoto/: EDGECAN.lnk  Features list.txt
edge_features/: Cargo.toml
edge_features/src/: main.rs
(+3370 files in other folders)
